Adding main website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,126 @@
 <!DOCTYPE html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+	<title>Luis Medina Resume</title>
+	<link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+	<div id="container">
+		<img src="images/profile_picture.jpg" alt="Profile picture" id="pic" />
+            <div>
+                <h1>Luis Humberto Medina Galvan</h1>
+                <p class="contact-info">
+                    Tel.: <a href="tel:+523312540646">+52 33 1254 0646</a><br />
+                    Email: <a href="mailto:greatoldone@lovecraft.com">humberto.medina@alumno.udg.mx</a><br />
+                    <a href="https://www.linkedin.com/in/luis-medina-g/" class="social-icon"> <i class="fa fa-linkedin"></i></a>
+                    <a href="https://github.com/LuisMedinaG/" class="social-icon"> <i class="fa fa-github"></i></a>
+                    <a href="https://twitter.com/Beto_Medina_G" class="social-icon"> <i class="fa fa-twitter"></i></a>
+                </p>
+            </div>
+
+            <div id="objective">
+                <p>
+                    Hi, I am a Computer Engineering student at the University of Guadalajara, I like competitive programming and I am a tutor for high school students who are learning to program or want to compete, I also like web development and automation with Python.
+                </p>
+            </div>
+
+            <div class="clear"></div>
+
+            <dl>
+                <br />
+
+                <dt>Education</dt>
+                <dd>
+                    <h2>University of Guadalajara<span>Guadalajara, Jal., Mex</span></h2>
+                    <p class="detail">Bachelor of Science in Computer Engineering<span>Aug. 2017 – Dec. 2021</span></p>
+                </dd>
+
+                <dd class="clear"></dd>
+
+                <dt>Skills</dt>
+                <dd>
+                    <dd><strong>Programming: </strong><i>(proficient)</i> Python, C/C++, C# <i>(familiar)</i> Java, PHP, JavaScript, HTML/CSS, SQL</dd>
+                    <dd><strong>Tools & Frameworks:</strong> Flask, React, Git, Linux/Bash, VI</dd>
+                    <dd><strong>Libraries:</strong> OpenCV, pandas, NumPy, Matplotlib</dd>
+                    <dd><strong>Soft skills:</strong> Teamwork, Creativity, Communication</dd>
+                    <dd><strong>Languages:</strong> Spanish (native), English (proficient)</dd>
+                    <dd>50hrs of PMI Agile Certified Practitioner</dd>                    
+                </dd>
+
+                <dd class="clear"></dd>
+
+                <dt>Experience</dt>
+                <dd>
+                    <h2>Oracle <span>Guadalajara, Jal., Mex.</span></h2>
+                    <p class="detail">Student intern <span>May 2020 – Present</span></p>
+                    <ul>
+                        <li>Worked in the VOS core team; my technical role included porting and debugging RDBMS issues on different Unix platforms. (C, ASM, PL/SQL, Unix/Linux)</li>
+                        <li>
+                            Developed a CLI tool with Python, which automated the debugging process by discarding non-reproducible bugs causedby the machine environment, allowing the developer to save time and focus only on the real
+                            critical issues.
+                        </li>
+                        <li>As part of the DB Cloud Security & Compliance Team, I automated the ScanCode toolkit during the Label Build Process andback-ported the Fortify security scan.</li>
+                    </ul>
+
+                    <h2>Socresa (IT Consultant Firm)<span>Guadalajara, Jal., Mex.</span></h2>
+                    <p class="detail">Back-end Developer <span>July 2017 – June 2018</span></p>
+                    <ul>
+                        <li>Worked on the company’s dashboard website, implemented the login page and user panel control by improving theHTML,CSS, PHP, andJavaScriptcode, which led to replacing the old pages.</li>
+                        <li>Created a software that identified and counted small objects in a photograph usingPythonand theOpenCVlibrary, whichdrove the company to offer the software to a client.</li>
+                    </ul>
+                </dd>
+
+                <dd class="clear"></dd>
+
+                <dt>Projects</dt>
+                <dd>
+                    <h2>Graph analyzer | <i>C#, Git</i><span>June 2019</span></h2>
+                    <ul>
+                        <li>Application that detects circles in an image generates a graph that connects rings without obstructions between them.</li>
+                        <li>Identify the minimum path between two nodes using Dijkstra’s algorithm and create the minimum spanning trees.</li>
+                        <li>It generates and animates particles on the graph, which play a game of prey and predators.</li>
+                    </ul>
+
+                    <h2>Path prediction | <i>R, QGIS</i><span>April 2019</span></h2>
+                    <ul>
+                        <li>Collaborated in the development of a software that predicts the migratory trajectories of different invasive species to helpscientists understand and prevent their appearance.</li>
+                        <li>The maps were composed usingQGIS, the code was written inR, and the data was publicly available on the web.</li>
+                    </ul>
+                </dd>
+
+                <dd class="clear"></dd>
+
+                <dt>Volunteering</dt>
+                <dd>
+                    <h2>Graph analyzer | <i>C++</i></h2>
+                    <ul>
+                        <li>I am a teacher and coach of high school students who are preparing to participate in OMIJAL by teaching them the basicsof programming and algorithms.</li>
+                    </ul>
+
+                    <h2>WebApp for Caritas Guadalajara A. C.<i>JavaScript, React, Git</i></h2>
+                    <ul>
+                        <li>I volunteered, along with a team, to develop a web application usingReact, which registers and tracks patients attendingthe NGO. Therefore, improved and backed-up the physical records of the clinic.</li>
+                    </ul>
+                </dd>
+
+                <dd class="clear"></dd>
+
+                <dt>Awards and Achievements</dt>
+                <dd>- 1st Place Oracle Global DB College New Hires & Interns Hackathon, Jul 2020</dd>
+                <dd>- Contestant atIBM Hackathon"Hackattack by Systems", Oct 2019</dd>
+                <dd>- Competitor in the International Collegiate Programming Contest (ICPC) Mexico, May 2018 - Oct 2019</dd>
+                <dd>- Attended the ESCOM IPN Winter Training Camp for Competitive Programming, Jan 2020</dd>
+
+                <dd class="clear"></dd>
+            </dl>
+
+                <footer>
+                <p>Author: Luis Medina <br/>
+                <a href="mailto:humberto.medina@alumno.udg.mx">humberto.medina@alumno.udg.mx</a></p>
+                </footer>
+        </div>
+    </body>
 </html>
