--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>Luis Humberto Medina Galvan</h1>
                 <p class="contact-info">
                     Tel.: <a href="tel:+523312540646">+52 33 1254 0646</a><br />
-                    Email: <a href="mailto:greatoldone@lovecraft.com">humberto.medina@alumno.udg.mx</a><br />
+                    Email: <a href="mailto:humberto.medina@alumno.udg.mx">humberto.medina@alumno.udg.mx</a><br />
                     <a href="https://www.linkedin.com/in/luis-medina-g/" class="social-icon"> <i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/LuisMedinaG/" class="social-icon"> <i class="fa fa-github"></i></a>
                     <a href="https://twitter.com/Beto_Medina_G" class="social-icon"> <i class="fa fa-twitter"></i></a>
