--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<div id="container">
 		<img src="images/profile_picture.jpg" alt="Profile picture" id="pic" />
             <div>
-                <h1>Luis Humberto Medina Galvan</h1>
+                <h1>Luis Medina</h1>
                 <p class="contact-info">
-                    Tel.: <a href="tel:+523312540646">+52 33 1254 0646</a><br />
-                    Email: <a href="mailto:humberto.medina@alumno.udg.mx">humberto.medina@alumno.udg.mx</a><br />
+                    <a href="tel:+523312540646">+52 33 1254 0646</a><br />
+                    <a href="mailto:humberto.medina@alumno.udg.mx">humberto.medina@alumno.udg.mx</a><br />
                     <a href="https://www.linkedin.com/in/luis-medina-g/" class="social-icon"> <i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/LuisMedinaG/" class="social-icon"> <i class="fa fa-github"></i></a>
                     <a href="https://twitter.com/Beto_Medina_G" class="social-icon"> <i class="fa fa-twitter"></i></a>
@@ -30,24 +30,11 @@
             <div class="clear"></div>
 
             <dl>
-                <br />
-
+            <br />
                 <dt>Education</dt>
                 <dd>
                     <h2>University of Guadalajara<span>Guadalajara, Jal., Mex</span></h2>
                     <p class="detail">Bachelor of Science in Computer Engineering<span>Aug. 2017 – Dec. 2021</span></p>
-                </dd>
-
-                <dd class="clear"></dd>
-
-                <dt>Skills</dt>
-                <dd>
-                    <dd><strong>Programming: </strong><i>(proficient)</i> Python, C/C++, C# <i>(familiar)</i> Java, PHP, JavaScript, HTML/CSS, SQL</dd>
-                    <dd><strong>Tools & Frameworks:</strong> Flask, React, Git, Linux/Bash, VI</dd>
-                    <dd><strong>Libraries:</strong> OpenCV, pandas, NumPy, Matplotlib</dd>
-                    <dd><strong>Soft skills:</strong> Teamwork, Creativity, Communication</dd>
-                    <dd><strong>Languages:</strong> Spanish (native), English (proficient)</dd>
-                    <dd>50hrs of PMI Agile Certified Practitioner</dd>                    
                 </dd>
 
                 <dd class="clear"></dd>
@@ -75,6 +62,19 @@
 
                 <dd class="clear"></dd>
 
+                <dt>Skills</dt>
+                <dd>
+                    <dd><strong>Programming: </strong><i>(proficient)</i> Python, C/C++, C# <i>(familiar)</i> Java, PHP, JavaScript, HTML/CSS, SQL</dd>
+                    <dd><strong>Tools & Frameworks:</strong> Flask, React, Git, Linux/Bash, VI</dd>
+                    <dd><strong>Libraries:</strong> OpenCV, pandas, NumPy, Matplotlib</dd>
+                    <dd><strong>Soft skills:</strong> Teamwork, Creativity, Communication</dd>
+                    <dd><strong>Languages:</strong> Spanish (native), English (proficient)</dd>
+                    <dd>50hrs of PMI Agile Certified Practitioner</dd>                    
+                </dd>
+                
+                <dd class="clear"></dd>
+
+                <br />
                 <dt>Projects</dt>
                 <dd>
                     <h2>Graph analyzer | <i>C#, Git</i><span>June 2019</span></h2>
